template: fix padding on narrow screen

--- a/sass/main.sass
+++ b/sass/main.sass
@@ -16,15 +16,15 @@ body
   font-family: $serifFonts
   background-color: white
   margin: 0 auto
-  padding: 5rem 20rem 5rem 1rem
+  padding: 5rem 20rem 2rem 1rem
 
   max-width: 45rem
-  min-height: calc(100% - 10rem)
+  min-height: calc(100% - 7rem)
   position: relative
   @media screen and (max-width: $singleColWidth)
     max-width: 54rem
-    padding: 2.5rem
-    min-height: calc(100% - 5rem)
+    padding: 1rem .7rem
+    min-height: calc(100% - 2rem)
   main
     padding-bottom: 2rem
 
@@ -121,6 +121,8 @@ footer
   position: absolute
   bottom: 1rem
   opacity: .7
+  p
+    margin: 0
 
 #back-to-top
   $bottonSize: 2.5rem
